--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,8 @@
-numpy>=1.17
-graphviz>=0.11.1
-opt_einsum>=2.3.0
-h5py>=2.9.0
-scipy>=1.1
-ncon>=2.0.0
+ncon
 qiskit-aer==0.11.2
 qiskit-terra>=0.25.1
-quimb>=1.6.0,
-tensornetwork>=0.4.6,
-tensorflow>=2.13.0,
-pymanopt>=2.1.1,
-QGOpt>=1.0.0
+quimb
+tensornetwork
+tensorflow
+pymanopt
+QGOpt
